--- a/input.scss
+++ b/input.scss
@@ -19,10 +19,10 @@ $secondary: $light-blue;
 $link-color: $primary;
 $link-hover-color: #cd462f;
 
-$card-bg: $terracota;
+$card-bg: $brunswick-green;
 $card-color: $cornsilk;
 
-$display-font-weight: 500;
+$display-font-weight: 700;
 
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
