--- a/blog/blog.css
+++ b/blog/blog.css
@@ -36,15 +36,30 @@
 .post-container{
     padding: 2rem;
     max-width: 1000px;
+    font-size: 1rem;
+    letter-spacing: 0.05rem;
+    line-height: 1.5rem;
 }
 .post-container p {
     color: black;
 }
+
+.post-container h2,h3,h4 {
+    font-weight: 700;
+    color: var(--bs-secondary);
+}
+
+.post-container h2{
+    margin-top: 2rem;
+    margin-bottom: 1.2rem;
+}
+
 .post-container h1,h2,h3 {
     color:rgb(7, 49, 45);
     margin-top: 1.2rem;
 }
 .post-container img {
+    padding: 1rem;
     width: 100%;
     max-height: 250px;
     object-fit: scale-down;
@@ -68,4 +83,21 @@
     margin-inline-end: 1rem;
     min-width: 250px;
     max-width: 675px;
+}
+
+@media screen and (min-width: 700px) {
+    .post-container {
+        font-size: 1.1rem;
+    }
+    .post-container h2 {
+        font-size: 2rem;
+    }
+}
+@media screen and (min-width: 900px) {
+    .post-container {
+        font-size: 1.2rem;
+    }
+    .post-container h2 {
+        font-size: 2.2rem;
+    }
 }
