--- a/input.scss
+++ b/input.scss
@@ -15,8 +15,8 @@ $body-color: $rich-black;
 $primary: $terracota;
 $secondary: $brunswick-green;
 $tertiary: $cornsilk;
-$link-color: $primary;
-$link-hover-color: #cd462f;
+$link-color: #c62e13;
+$link-hover-color: #e84f35;
 
 $card-bg: $brunswick-green;
 $card-color: $cornsilk;
@@ -109,14 +109,24 @@ body {
 }
 
 .hero {
-    min-height: 85svh;
+
     height: fit-content;
-    .img-wrap {
-        min-width: 30vw;
+    .title {
+        padding: 1rem 2rem 0 2rem;
+    } 
+    .subtitle {
+        padding-inline: 2rem;
+        padding-bottom: 1rem;
     }
-    img {
-        min-height: 300px;
-        object-fit: contain;
+    .img-wrap {
+        width: 100%;
+        margin: -1rem 0 ;
+        padding: 0rem 5rem;
+    }
+    .hero-img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 }
 
@@ -168,6 +178,33 @@ footer {
 
 @media screen and (min-width: 600px) {
     
+    .sect {
+        padding: 5rem;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .hero {
+        height: 80svh;
+        overflow-x: clip;
+        .title {
+            padding-top: 4rem;
+        }
+        .subtitle {
+            padding-top: 3rem;
+        }
+        .img-wrap {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 80svh;
+            padding: 2rem;
+        }
+        .hero-img {
+            align-self: center;
+        }
+    }
+
     .sect {
         padding: 5rem;
     }
