--- a/style.css
+++ b/style.css
@@ -93,11 +93,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #dc6954;
-  --bs-link-color-rgb: 220, 105, 84;
+  --bs-link-color: #c62e13;
+  --bs-link-color-rgb: 198, 46, 19;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #cd462f;
-  --bs-link-hover-color-rgb: 205, 70, 47;
+  --bs-link-hover-color: #e84f35;
+  --bs-link-hover-color-rgb: 232, 79, 53;
   --bs-code-color: #d63384;
   --bs-highlight-color: #0c1518;
   --bs-highlight-bg: #fff3cd;
@@ -3250,7 +3250,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 187, 89, 71;
+  --bs-btn-focus-shadow-rgb: 207, 77, 54;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -11914,15 +11914,24 @@ body {
 }
 
 .hero {
-  min-height: 85svh;
   height: fit-content;
 }
-.hero .img-wrap {
-  min-width: 30vw;
+.hero .title {
+  padding: 1rem 2rem 0 2rem;
 }
-.hero img {
-  min-height: 300px;
-  object-fit: contain;
+.hero .subtitle {
+  padding-inline: 2rem;
+  padding-bottom: 1rem;
+}
+.hero .img-wrap {
+  width: 100%;
+  margin: -1rem 0;
+  padding: 0rem 5rem;
+}
+.hero .hero-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .proyectos {
@@ -11968,6 +11977,31 @@ footer {
 }
 
 @media screen and (min-width: 600px) {
+  .sect {
+    padding: 5rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .hero {
+    height: 80svh;
+    overflow-x: clip;
+  }
+  .hero .title {
+    padding-top: 4rem;
+  }
+  .hero .subtitle {
+    padding-top: 3rem;
+  }
+  .hero .img-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80svh;
+    padding: 2rem;
+  }
+  .hero .hero-img {
+    align-self: center;
+  }
   .sect {
     padding: 5rem;
   }
